@@ -25,6 +25,10 @@ Changes Since 0.10
 
   - Fix [ 3601607 ] node.__repr__() must return `str` instance.
 
+* docutils/parsers/rst/directives/__init__.py
+
+  - Fix [ 3606028 ] ``assert`` is skipped with ``python -O``.
+
 * docutils/parsers/rst/directives/images.py
 
   - Apply [ 3599485 ] node source/line information for sphinx translation.
